--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-core": "^7.0.0-beta.41",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-config-standard": "^13.0.1",
     "eslint-loader": "^2.2.1",
@@ -25,6 +26,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "tslint": "^5.18.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.5.3",
