--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
       "es2015",
       "es2016",
       "es2017"
-    ]
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "src"
